# pystackw9

./: README.md  manage.py  pyproject.toml
study_async/: .coverage  settings.py  urls.py
study_async/apostilas/: admin.py  apps.py  models.py  urls.py  views.py
study_async/apostilas/migrations/: 0001_initial.py
study_async/apostilas/templates/apostilas/: adicionar_apostilas.html  apostila.html
study_async/docs/: .~lock.aula1.odt#  aula1.odt  aula3.odt
study_async/docs/AULA 1/: AULA 1.md
study_async/flashcard/: admin.py  apps.py  models.py  urls.py  views.py
study_async/flashcard/migrations/: 0001_initial.py  0002_flashcarddesafio_desafio.py
study_async/flashcard/templates/flashcard/: desafio.html  iniciar_desafio.html  listar_desafio.html  novo_flashcard.html  relatorio.html
study_async/templates/base/: base.html
study_async/templates/partials/: header.html
study_async/templates/static/flashcard/js/: flashcard.js
study_async/usuarios/: admin.py  apps.py  urls.py  views.py
study_async/usuarios/migrations/: 0001_initial.py  0002_delete_user.py
study_async/usuarios/templates/usuarios/: cadastro.html  login.html
